tests/core/snapshots/auth-jwt-claims.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Authentication Failure: Missing Authorization Header"
      }
    ]
  }
}
