tests/core/snapshots/auth-jwt-claims.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "myProfile": {
        "id": "you",
        "name": "Test User"
      }
    }
  }
}
