tests/core/snapshots/auth-jwt-claims.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Profile {
  id: String!
  name: String!
}

type Query {
  myProfile: Profile
}

schema {
  query: Query
}
