tests/core/snapshots/auth-jwt-claims.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream
@link(id: "jwks", src: "jwks.json", type: Jwks)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Profile {
  id: String!
  name: String!
}

type Query {
  myProfile: Profile
  @http(url: "http://upstream/users/{{.claims.sub}}")
  @protected
}
