tests/core/snapshots/auth-jwt.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream
@link(id: "jwks", src: "jwks.json", type: Jwks)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
  mutation: Mutation
}

type Mutation {
  protectedType: ProtectedType @http(url: "http://upstream/protected")
}

type Nested {
  name: String!
  protected: String! @protected
}

type ProtectedType @protected {
  name: String!
  nested: String!
}

type Query {
  nested: Nested!
  @expr(body: { name: "nested name", protected: "protected nested" })
  protectedScalar: String! @expr(body: "data from protected scalar") @protected
  protectedType: ProtectedType
  @expr(body: { name: "protected type name", nested: "protected type nested" })
  scalar: String! @expr(body: "data from public scalar")
}
