tests/core/snapshots/auth-multiple-complex.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "a", src: ".htpasswd_a", type: Htpasswd)
@link(id: "b", src: ".htpasswd_b", type: Htpasswd)
@link(id: "c", src: ".htpasswd_c", type: Htpasswd)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

union Animal = Bird | Cat | Dog

type Bird {
  tweet: String @protected(id: ["c"])
}

type Cat {
  meow: String @protected(id: ["b"])
}

type Dog {
  bark: String @protected(id: ["a"])
}

type Query {
  animals: [Animal!]!
  @expr(
    body: [
      { Dog: { bark: "woof" } }
      { Cat: { meow: "meow" } }
      { Bird: { tweet: "tweet" } }
    ]
  )
}
