tests/core/snapshots/auth-protected-expr.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "publicData": "public"
    }
  }
}
