tests/core/snapshots/auth-protected-expr.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Dashboard {
  stats: String!
}

type Query {
  adminDashboard: Dashboard
  protectedBasic: String!
  publicData: String!
}

schema {
  query: Query
}
