tests/core/snapshots/auth-protected-expr.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream
@link(id: "jwks", src: "jwks.json", type: Jwks)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Dashboard {
  stats: String!
}

type Query {
  adminDashboard: Dashboard
  @expr(body: { stats: "admin stats" })
  @protected(expr: "claims.role == 'admin'")
  protectedBasic: String! @expr(body: "protected data") @protected
  publicData: String! @expr(body: "public")
}
